# rosemary-web

./: .dockerignore  .editorconfig  .env.dev  .env.template  .env.test  .env_template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  \  docker-compose.yaml  notes.md  openapi.yaml  todos.md
admin/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite-env.d.ts  vite.config.ts
admin/src/: App.vue  main.ts  style.css
admin/src/components/: PaintingImageRow.vue  PaintingInformation.vue  PaintingTranslations.vue  SavingDialog.vue
admin/src/composable/image/: imageChangeEvent.ts  resize.ts  uploadMultiple.ts
admin/src/composable/painting/: paintingChangeEvent.ts  paintingSave.ts
admin/src/router/: router.ts
admin/src/sdk/: api.ts
admin/src/stores/: userStore.ts
admin/src/views/: Home.vue  Login.vue
admin/src/views/Paintings/: Entry.vue  EntryDeatil.vue  List.vue
development/nginx/: nginx setting.txt  nginx.conf  nginx_compose.conf  nginx_setting.md
src/: client.rs  database.rs  main.rs  requests.rs  utils.rs
src/client/: component_props.rs  gallery.rs  index.rs  localization.rs  translations.rs
src/config/: load.rs
src/database/: connection.rs  connection2.rs  models.rs
src/database/models/: emails.rs  generics.rs  image.rs  painting.rs  user.rs  user_entries.rs
src/errors/: api_error.rs
src/requests/: dto.rs  router.rs  routes.rs
src/requests/dto/: employee.rs  generic_response.rs  get_paintings_query.rs  paginated_result.rs  salute_you.rs
src/requests/routes/: frontend.rs  test.rs  v1_0.rs
src/requests/routes/frontend/: common_dto.rs  contact.rs  contact_form.rs  gallery.rs  gallery_detail.rs  index.rs
src/requests/routes/test/: file.rs  not_found.rs  promote.rs  rejection.rs  salute.rs  upload.rs
src/requests/routes/v1_0/: auth.rs  paintings.rs  paintings_images.rs
src/requests/routes/v1_0/auth/: create.rs  delete.rs  login.rs  (+1 more)
src/utils/: cors.rs  file_system.rs  images.rs  jobs.rs
src/utils/auth/: password.rs  token.rs
src/utils/cors/: cors_setting.rs
src/utils/file_system/: fs_delete.rs  fs_read.rs  fs_write.rs
src/utils/images/: resize_to_max.rs
src/utils/jobs/: image_processing.rs  image_resize.rs
static/assets/: form.css  gallery.css  gallery.js  galleryDetail.css  galleryDetail.js  main.css  main.js  navbar.css  utils.js
templates/: contact.html  contactSent.html  gallery.html  galleryDetail.html  galleryDetail_backup.html  index.html
templates/components/: footer.html  head.html  imageDialog.html  navbar.html
templates/components/gallery/: galleryItem.html
templates/components/paintingDetail/: buyDialog.html  paintingPhoto.html
test/: docker-compose.yaml  package-lock.json  package.json
test/src/: user.test.js
test/test/: painting_images.test.js
www/static/: main.css  main.js
(+9 files in other folders)
