[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
memory-stats = "1.1.0"
openssl = "0.10.64"
postgres = "0.19.7"
postgres-openssl = "0.5.0"
serde = "1.0.201"
serde_derive = "1.0.201"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
warp = "0.3.7"
