[package]
name = "rosemary"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
askama = "0.12.1"
bcrypt = "0.15.1"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
crypto = "0.5.1"
ctor = "0.2.8"
dotenv = "0.15.0"
futures-util = "0.3.30"
image = "0.25.4"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.22"
memory-stats = "1.1.0"
once_cell = "1.19.0"
postgres = "0.19.7"
postgres-from-row = "0.5.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.201"
serde_json = "1.0.117"
sha2 = "0.10.8"
sql_query_builder = { version = "2.4.1", features = ["postgresql"] }
sqlx = { version = "0.8.0", features=[
	"postgres",
	"runtime-tokio",
	"runtime-tokio-rustls",
	"derive",
	"uuid",
	"chrono",
	"json",
	"tls-rustls"
] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
utoipa = "5.3.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
warp = "0.3.7"